crates/rspyts-macros/tests/ui/tuple_struct.stderr
error: bridged tuple structs must contain exactly one public field so they can project as a transparent newtype; use named fields for an object shape
 --> tests/ui/tuple_struct.rs:4:12
  |
4 | pub struct Point(pub f64, pub f64);
  |            ^^^^^
